test/semantic_errors/invalid_assignment12.mc
void main() {
    int a[5];
    int b[6];
    a = b[2]; /* cannot assign int to array */
}